--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/fragments/competition-setup.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/fragments/competition-setup.html
@@ -111,10 +111,13 @@
         <h2 class="heading-medium no-margin">Complete competition setup</h2>
         <p>Setup of competition has now been completed and will automatically open on the date set. If you need to change anything after publication, contact the IFS Content Team.</p>
         <hr />
-        <div>
-            <button type="submit" class="button">Done</button>
-            <button type="button" class="js-close buttonlink">Cancel</button>
-        </div>
+        <form class="js-modal-url-target" method="post" th:object="${competitionSetupForm}"
+              th:action="@{/competition/setup/{competitionId}/ready-to-open(competitionId=${model.general.competition.id})}">
+            <div>
+                <button type="submit" class="button">Done</button>
+                <button type="button" class="js-close buttonlink">Cancel</button>
+            </div>
+        </form>
     </div>
 </div>
 
