--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/applicant-dashboard.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/applicant-dashboard.html
@@ -52,7 +52,8 @@
                         <li class="status-2-col" th:each="inProgressView : ${model.inProgress}" th:classappend="${inProgressView.assignedToMe ? 'assigned-to-me' : '' }">
                             <div class="task">
                                 <h3 class="heading-small">
-                                    <a th:href="${inProgressView.linkUrl}" th:text="${inProgressView.title}" />
+                                    <a th:if="${inProgressView.assignedToInterview}" th:text="${inProgressView.title}" class="disabled" aria-disabled="true" />
+                                    <a th:unless="${inProgressView.assignedToInterview}" th:href="${inProgressView.linkUrl}" th:text="${inProgressView.title}" />
                                 </h3>
                                 <ul class="application-details">
                                     <li>Application number: <span th:text="${inProgressView.applicationNumber}"></span></li>
