IFS-1784 - Removed table-overflow class on table attribute to fix focus border issue

--- a/ifs-web-service/ifs-web-core/src/main/resources/templates/finance/finance.html
+++ b/ifs-web-service/ifs-web-core/src/main/resources/templates/finance/finance.html
@@ -364,7 +364,7 @@
                            required="required" />
                 </div>
                 <h3>Number of staff and roles within the project</h3>
-                <div class="form-group table-overflow">
+                <div class="form-group">
                     <table class="labour-costs-table">
                         <thead>
                         <tr>
@@ -787,7 +787,7 @@
 
             <th:block th:if="${viewmode == 'edit'}">
                 <div th:attr="data-repeatable-container=${question.id}">
-                    <div class="form-group table-overflow">
+                    <div class="form-group">
                         <table id="material-costs-table">
                             <thead>
                             <tr>
@@ -1304,7 +1304,7 @@
         </th:block>
         <th:block th:if="${viewmode == 'edit'}">
             <div th:attr="data-repeatable-container=${question.id}">
-                <div class="form-group table-overflow">
+                <div class="form-group">
                     <table id="travel-costs-table">
                         <thead>
                         <tr>
