--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/competition/setup.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/competition/setup.html
@@ -16,9 +16,9 @@
 <th:block th:insert="fragments/layout :: global-header" />
 
 <main tabindex="-1" id="content">
-    <th:block th:insert="fragments/layout :: header-sub" th:with="linkTitle='All competitions',linkClass='link-back',linkUrl=@{/dashboard},currentApplication=${currentApplication}" th:if="${model.general.currentSectionIsHome()}" />
+    <th:block th:insert="fragments/layout :: header-sub" th:with="linkTitle='All competitions', linkClass='link-back', linkUrl=@{/dashboard},currentApplication=${currentApplication}" th:if="${model.general.currentSectionIsHome()} and ${model.general.getState().getCompetitionStatus() == T(org.innovateuk.ifs.competition.resource.CompetitionStatus).COMPETITION_SETUP}" />
+    <th:block th:insert="fragments/layout :: header-sub" th:with="linkTitle='Competition', linkClass='link-back', linkUrl=@{/competition/{competitionId}/(competitionId=${model.general.competition.id})}" th:if="${model.general.currentSectionIsHome()} and ${model.general.getState().getCompetitionStatus() != T(org.innovateuk.ifs.competition.resource.CompetitionStatus).COMPETITION_SETUP}" />
     <th:block th:insert="fragments/layout :: header-sub" th:with="linkTitle='Competition setup',linkClass='link-back',linkUrl=@{/competition/setup/{competitionId}/(competitionId=${model.general.competition.id})}" th:unless="${model.general.currentSectionIsHome()}" />
-
 
     <th:block th:if="${model.general.currentSectionIsHome()}">
         <th:block th:insert="fragments/layout :: page-title" th:with="pageTitle='Competition setup',size='heading-xlarge'" />
