IFS-1784 Fixed 'other costs' section which had same issue. See Jira comments

--- a/ifs-web-service/ifs-web-core/src/main/resources/templates/finance/finance.html
+++ b/ifs-web-service/ifs-web-core/src/main/resources/templates/finance/finance.html
@@ -1463,7 +1463,7 @@
         </th:block>
         <th:block th:if="${viewmode == 'edit'}">
             <div th:attr="data-repeatable-container=${question.id}">
-                <div class="form-group table-overflow">
+                <div class="form-group">
                     <table id="other-costs-table">
                         <thead>
                         <tr>
