IFS-3185 - Content fix for interview panel assessor invite find tab - Rejected -> Declined

--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/interview/assessor-find.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/interview/assessor-find.html
@@ -32,7 +32,7 @@
         <div class="column-quarter">
             <div class="highlight-panel highlight-panel-padded">
                 <span class="heading-large" th:text="${model.assessorsDeclined}">3</span><br/>
-                <small>Rejected</small>
+                <small>Declined</small>
             </div>
         </div>
     </div>
