--- a/ifs-web-service/ifs-web-core/src/main/resources/templates/finance/academic-finance.html
+++ b/ifs-web-service/ifs-web-core/src/main/resources/templates/finance/academic-finance.html
@@ -65,14 +65,14 @@
         <div class="grid-row">
             <div class="form-group"
                  th:classappend="${#fields.hasErrors('${form.formInput[cost-'+ academicFinance.incurredStaff?.id +'-cost]}')} ? 'form-group-error'">
-                <label class="form-label column-third" for="incurred-staff">
+                <label class="form-label column-third" th:for="formInput[cost- + ${academicFinance.incurredStaff?.id} + -cost]">
                     <span>Staff</span>
                     <th:block th:insert="question-type/form-elements :: form-validation-messages (id=${'cost-'+academicFinance.incurredStaff?.id+'-cost'})" />
                 </label>
                 <div class="column-two-thirds">
                     <input type="text"
                            class="form-control width-full"
-                           id="incurred-staff"
+                           th:id="formInput[cost- + ${academicFinance.incurredStaff?.id} + -cost]"
                            th:name="cost- + ${academicFinance.incurredStaff?.id} + -incurred_staff"
                            ifs:nonZeroValue="${academicFinance.incurredStaff?.numberValue}"
                            pattern="^[0-9]*$"
@@ -86,13 +86,13 @@
         <div class="grid-row">
             <div class="form-group" th:classappend="${#fields.hasErrors('${form.formInput[cost-'+ academicFinance.incurredTravelAndSubsistence?.id +'-cost]}')} ? 'form-group-error'">
 
-                <label class="form-label column-third" for="travel">
+                <label class="form-label column-third" th:for="formInput[cost- + ${academicFinance.incurredTravelAndSubsistence?.id} + -cost]">
                     <span>Travel &amp; subsistence </span>
                     <th:block th:insert="question-type/form-elements :: form-validation-messages (id=${'cost-'+ academicFinance.incurredTravelAndSubsistence?.id+'-cost'})" />
                 </label>
                 <div class="column-two-thirds">
                     <input class="form-control width-full"
-                           id="travel"
+                           th:id="formInput[cost- + ${academicFinance.incurredTravelAndSubsistence?.id} + -cost]"
                            th:name="cost- + ${academicFinance.incurredTravelAndSubsistence?.id} + -incurred_travel_subsistence"
                            type="text"
                            ifs:nonZeroValue="${academicFinance.incurredTravelAndSubsistence?.numberValue}"
@@ -106,13 +106,13 @@
         </div>
         <div class="grid-row">
             <div class="form-group"  th:classappend="${#fields.hasErrors('${form.formInput[cost-'+ academicFinance.incurredOtherCosts?.id +'-cost]}')} ? 'form-group-error'">
-                <label class="form-label column-third" for="other">
+                <label class="form-label column-third" th:for="formInput[cost- + ${academicFinance.incurredOtherCosts?.id} + -cost]">
                     <span>Other costs</span>
                     <th:block th:insert="question-type/form-elements :: form-validation-messages (id=${'cost-'+academicFinance.incurredOtherCosts?.id+'-cost'})" />
                 </label>
                 <div class="column-two-thirds">
                     <input class="form-control width-full"
-                           id="other"
+                           th:id="formInput[cost- + ${academicFinance.incurredOtherCosts?.id} + -cost]"
                            th:name="cost- + ${academicFinance.incurredOtherCosts?.id} + -incurred_other_costs"
                            type="text"
                            ifs:nonZeroValue="${academicFinance.incurredOtherCosts?.numberValue}"
@@ -146,13 +146,13 @@
 
         <div class="grid-row">
             <div class="form-group" th:classappend="${#fields.hasErrors('${form.formInput[cost-'+ academicFinance.allocatedInvestigators?.id +'-cost]}')} ? 'form-group-error'">
-                <label class="form-label column-third" for="investigators">
+                <label class="form-label column-third" th:for="formInput[cost- + ${academicFinance.allocatedInvestigators?.id} + -cost]">
                     <span>Investigators</span>
                     <th:block th:insert="question-type/form-elements :: form-validation-messages (id=${'cost-'+academicFinance.allocatedInvestigators?.id+'-cost'})" />
                 </label>
                 <div class="column-two-thirds">
                     <input class="form-control width-full"
-                           id="investigators"
+                           th:id="formInput[cost- + ${academicFinance.allocatedInvestigators?.id} + -cost]"
                            th:name="cost- + ${academicFinance.allocatedInvestigators?.id} + -allocated_investigators" type="text"
                            ifs:nonZeroValue="${academicFinance.allocatedInvestigators?.numberValue}"
                            pattern="^[0-9]*$"
@@ -165,13 +165,13 @@
         </div>
         <div class="grid-row">
             <div class="form-group" th:classappend="${#fields.hasErrors('${form.formInput[cost-'+ academicFinance.allocatedEstatesCosts?.id +'-cost]}')} ? 'form-group-error'">
-                <label class="form-label column-third" for="estates">
+                <label class="form-label column-third" th:for="formInput[cost- + ${academicFinance.allocatedEstatesCosts?.id} + -cost]">
                     <span>Estates Costs</span>
                     <th:block th:insert="question-type/form-elements :: form-validation-messages (id=${'cost-'+academicFinance.allocatedEstatesCosts?.id+'-cost'})" />
                 </label>
                 <div class="column-two-thirds">
                     <input class="form-control width-full"
-                           id="estates"
+                           th:id="formInput[cost- + ${academicFinance.allocatedEstatesCosts?.id} + -cost]"
                            th:name="cost- + ${academicFinance.allocatedEstatesCosts?.id} + -allocated_estates_costs" type="text"
                            ifs:nonZeroValue="${academicFinance.allocatedEstatesCosts?.numberValue}"
                            pattern="^[0-9]*$"
@@ -184,13 +184,13 @@
         </div>
         <div class="grid-row">
             <div class="form-group" th:classappend="${#fields.hasErrors('${form.formInput[cost-'+ academicFinance.allocatedOtherCosts?.id +'-cost]}')}? 'form-group-error'">
-                <label class="form-label column-third" for="other-direct">
+                <label class="form-label column-third" th:for="formInput[cost- + ${academicFinance.allocatedOtherCosts?.id} + -cost]">
                     <span>Other costs</span>
                     <th:block th:insert="question-type/form-elements :: form-validation-messages (id=${'cost-'+academicFinance.allocatedOtherCosts?.id+'-cost'})" />
                 </label>
                 <div class="column-two-thirds">
                     <input class="form-control width-full"
-                           id="other-direct"
+                           th:id="formInput[cost- + ${academicFinance.allocatedOtherCosts?.id} + -cost]"
                            th:name="cost- + ${academicFinance.allocatedOtherCosts?.id} + -allocated_other_costs" type="text"
                            ifs:nonZeroValue="${academicFinance.allocatedOtherCosts?.numberValue}"
                            pattern="^[0-9]*$"
@@ -220,13 +220,13 @@
         <legend class="visuallyhidden">Indirect costs</legend>
         <div class="grid-row">
             <div class="form-group border-top"  th:classappend="${#fields.hasErrors('${form.formInput[cost-'+ academicFinance.indirectCosts?.id +'-cost]}')} ? 'form-group-error'">
-                <label class="form-label column-third" for="indirect">
+                <label class="form-label column-third" th:for="formInput[cost- + ${academicFinance.indirectCosts?.id} + -cost]">
                     <span class="form-label-bold">Indirect costs </span>
                     <th:block th:insert="question-type/form-elements :: form-validation-messages (id=${'cost-'+academicFinance.indirectCosts?.id+'-cost'})" />
                 </label>
                 <div class="column-two-thirds">
                     <input class="form-control width-full"
-                           id="indirect"
+                           th:id="formInput[cost- + ${academicFinance.indirectCosts?.id} + -cost]"
                            th:name="cost- + ${academicFinance.indirectCosts?.id} + -indirect_costs"
                            type="text"
                            ifs:nonZeroValue="${academicFinance.indirectCosts?.numberValue}"
@@ -248,13 +248,13 @@
 
         <div class="grid-row">
             <div class="form-group"  th:classappend="${#fields.hasErrors('${form.formInput[cost-'+ academicFinance.exceptionsStaff?.id +'-cost]}')} ? 'form-group-error'">
-                <label class="form-label column-third" for="exceptions-staff">
+                <label class="form-label column-third" th:for="formInput[cost- + ${academicFinance.exceptionsStaff?.id} + -cost]">
                     <span>Staff</span>
                     <th:block th:insert="question-type/form-elements :: form-validation-messages (id=${'cost-'+academicFinance.exceptionsStaff?.id+'-cost'})" />
                 </label>
                 <div class="column-two-thirds">
                     <input class="form-control width-full"
-                           id="exceptions-staff"
+                           th:id="formInput[cost- + ${academicFinance.exceptionsStaff?.id} + -cost]"
                            th:name="cost- + ${academicFinance.exceptionsStaff?.id} + -exceptions_staff" type="text"
                            ifs:nonZeroValue="${academicFinance.exceptionsStaff?.numberValue}"
                            pattern="^[0-9]*$"
@@ -267,13 +267,13 @@
         </div>
         <div class="grid-row">
             <div class="form-group" th:classappend="${#fields.hasErrors('${form.formInput[cost-'+ academicFinance.exceptionsOtherCosts?.id +'-cost]}')} ? 'form-group-error'">
-                <label class="form-label column-third" for="exceptions-other-direct">
+                <label class="form-label column-third" th:for="formInput[cost- + ${academicFinance.exceptionsOtherCosts?.id} + -cost]">
                     <span>Other costs</span>
                     <th:block th:insert="question-type/form-elements :: form-validation-messages (id=${'cost-'+academicFinance.exceptionsOtherCosts?.id+'-cost'})" />
                 </label>
                 <div class="column-two-thirds">
                     <input class="form-control width-full"
-                           id="exceptions-other-direct"
+                           th:id="formInput[cost- + ${academicFinance.exceptionsOtherCosts?.id} + -cost]"
                            th:name="cost- + ${academicFinance.exceptionsOtherCosts?.id} + -exceptions_other_costs"
                            type="text"
                            ifs:nonZeroValue="${academicFinance.exceptionsOtherCosts?.numberValue}"
