IFS-3252 - Fixes disabled Accepted tab on interview assessor pending page

--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/interview/assessor-overview.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/interview/assessor-overview.html
@@ -55,8 +55,8 @@
                 <li class="selected">
                     <a th:href="@{/assessment/interview/competition/{competitionId}/assessors/pending-and-declined(competitionId=${model.competitionId})}">Pending and declined</a>
                 </li>
-                <li class="not-selected" aria-label="Item not selected">
-                    <a class="buttonlink disabled">Accepted</a>
+                <li class="not-selected">
+                    <a th:href="@{/assessment/interview/competition/{competitionId}/assessors/accepted(competitionId=${model.competitionId})}">Accepted</a>
                 </li>
             </ul>
 
