--- a/ifs-web-service/ifs-project-setup-mgt-service/src/main/resources/templates/project/detail.html
+++ b/ifs-web-service/ifs-project-setup-mgt-service/src/main/resources/templates/project/detail.html
@@ -123,7 +123,7 @@
             </tbody>
         </table>
     </th:block>
-        <th:block th:if="${model.ifsAdministrator}">
+        <th:block th:if="${model.showWithdrawLink}">
             <a data-js-modal="modal-withdraw-project" class="buttonlink extra-margin">Withdraw project</a>
                 <th:block th:insert="fragments/modals :: modal-withdraw-project" />
         </th:block>
