--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/applicant-dashboard.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/applicant-dashboard.html
@@ -49,7 +49,7 @@
                 <div class="progress-list">
                     <h2 class="heading-medium" th:text="${model.applicationInProgressText}"/>
                     <ul>
-                        <li th:attr="data-application-id=${app.id}" class="status-2-col" th:each="inProgressView : ${model.inProgress}" th:classappend="${inProgressView.assignedToMe ? 'assigned-to-me' : '' }">
+                        <li class="status-2-col" th:each="inProgressView : ${model.inProgress}" th:classappend="${inProgressView.assignedToMe ? 'assigned-to-me' : '' }">
                             <div class="task">
                                 <h3 class="heading-small">
                                     <a th:if="${inProgressView.assignedToInterview}" th:text="${inProgressView.title}" class="disabled" aria-disabled="true" />
