--- a/ifs-web-service/ifs-web-core/src/main/resources/static/sass/components/_modifiers.scss
+++ b/ifs-web-service/ifs-web-core/src/main/resources/static/sass/components/_modifiers.scss
@@ -127,6 +127,16 @@ table {
   table{
     max-width: 100%;
   }
+
+  table {
+    td {
+      &:first-child input,
+      &:first-child textarea
+      {
+        margin-left: 3px;
+      }
+    }
+  }
 }
 
 .hint {
