--- a/ifs-web-service/ifs-web-core/src/main/resources/static/sass/components/_modifiers.scss
+++ b/ifs-web-service/ifs-web-core/src/main/resources/static/sass/components/_modifiers.scss
@@ -131,8 +131,7 @@ table {
   table {
     td {
       &:first-child input,
-      &:first-child textarea
-      {
+      &:first-child textarea{
         margin-left: 3px;
       }
     }
