IFS-1765 Adding condition check for Google analytics script

--- a/ifs-auth-service/ifs-idp-service/src/main/docker/pages/views/login.vm
+++ b/ifs-auth-service/ifs-idp-service/src/main/docker/pages/views/login.vm
@@ -48,11 +48,14 @@
         <script src="$resourcesDomain/js/vendor/govuk/ie.js" type="text/javascript"></script>
       <![endif]-->
         <!-- Google Tag Manager -->
+        #set ($trackingID = "#springMessageText('ifs.webserver.googleanalytics.trackingid', '#')")
+        #if( $trackingID != "#")
         <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
         new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
         j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
         })(window,document,'script','dataLayer','#springMessageText('ifs.webserver.googleanalytics.trackingid', '#')');</script>
+        #end
         <!-- End Google Tag Manager -->
 
       <meta name="viewport" content="width=device-width, initial-scale=1" />
