--- a/ifs-web-service/ifs-web-core/src/main/resources/templates/finance/academic-finance.html
+++ b/ifs-web-service/ifs-web-core/src/main/resources/templates/finance/academic-finance.html
@@ -130,7 +130,10 @@
                     <span class="form-label-bold">Subtotal</span>
                 </label>
                 <div class="column-two-thirds">
-                    <input class="form-control width-full" id="subtotal-resources" data-calculation-fields="#incurred-staff,#travel,#other"
+                    <input class="form-control width-full" id="subtotal-resources"
+                           th:attr="data-calculation-fields=|[id='formInput[cost-${academicFinance.incurredOtherCosts?.id}-cost]'],
+                           [id='formInput[cost-${academicFinance.incurredTravelAndSubsistence?.id}-cost]'],
+                           [id='formInput[cost-${academicFinance.incurredStaff?.id}-cost]']|"
                            data-calculation-operations="+" type="text" readonly="readonly"
                            th:value="'£' + ${#numbers.formatInteger(academicFinance.getTotalIncurred(),0, 'DEFAULT')}"/>
                 </div>
@@ -207,7 +210,11 @@
                     <span class="form-label-bold">Subtotal</span>
                 </label>
                 <div class="column-two-thirds">
-                    <input class="form-control width-full" data-calculation-fields="#investigators,#estates,#other-direct" data-calculation-operations="+"
+                    <input class="form-control width-full"
+                           th:attr="data-calculation-fields=|[id='formInput[cost-${academicFinance.allocatedInvestigators?.id}-cost]'],
+                           [id='formInput[cost-${academicFinance.allocatedEstatesCosts?.id}-cost]'],
+                           [id='formInput[cost-${academicFinance.allocatedOtherCosts?.id}-cost']|"
+                           data-calculation-operations="+"
                            readonly="readonly" id="subtotal-directly-allocated"
                            th:value="'£' + ${#numbers.formatInteger(academicFinance.getTotalAllocated(),0, 'DEFAULT')}"/>
                 </div>
@@ -291,7 +298,9 @@
                     <span class="form-label-bold">Subtotal</span>
                 </label>
                 <div class="column-two-thirds">
-                    <input id="subtotal-exceptions" class="form-control width-full" data-calculation-fields="#exceptions-staff,#exceptions-other-direct"
+                    <input id="subtotal-exceptions" class="form-control width-full"
+                           th:attr="data-calculation-fields=|[id='formInput[cost-${academicFinance.exceptionsStaff?.id}-cost]'],
+                           [id='formInput[cost-${academicFinance.exceptionsOtherCosts?.id}-cost]']|"
                            data-calculation-operations="+" readonly="readonly"
                            th:value="'£' + ${#numbers.formatInteger(academicFinance.getTotalExceptions(),0, 'DEFAULT')}"/>
                 </div>
