--- a/ifs-web-service/ifs-web-core/src/main/resources/static/sass/components/_statusses.scss
+++ b/ifs-web-service/ifs-web-core/src/main/resources/static/sass/components/_statusses.scss
@@ -4,14 +4,13 @@
 %action-required {
   background-image: url('../images/ifs-images/icons/icon-edit.png');
   background-repeat: no-repeat;
-  background-size: 20px;
-  background-position: 0;
+  background-size: 19px;
+  background-position: -2px 1px;
 }
 
 %icon-tick {
   background-image: url('../images/ifs-images/icons/icon-tick.png');
   background-repeat: no-repeat;
-  background-size: 26px;
   background-position: center left;
 }
 
@@ -189,7 +188,6 @@ span {
       background-position: center center;
 
       &.ok {
-        background-size: 24px;
         padding-left: 0.625em;
 
         a {
